--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,25 @@
 
 <body>
 
+  <!-- order Modal -->
+  <div class="modal fade p-sm-4" id="orderModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered max-w-497">
+      <div class="modal-content rounded-16">
+        <div class="modal-body p-4">
+          <img alt="img" src="img/Success Illustration.png" class="d-block mx-auto mt-2 img-fluid">
+          <p class="text-success3 text-center fs-20 font-bold mt-3 mb-2">سفارش شما با موفقیت ثبت شد</p>
+          <p class="fw-bold text-gray2 fs-14 text-center mb-4">
+            کد رهگیری سفارش شما:
+            ۲۳۴۵۶۷۸۹
+          </p>
+          <a class="d-flex align-items-center justify-content-center py-2 rounded-pill btn btn-outline-warning">
+            <p class="mb-0">سفارش های من</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- menu -->
   <div class="offcanvas offcanvas-end d-xl-none max-w-284" tabindex="-1" id="offcanvasRight"
     aria-labelledby="offcanvasRightLabel">
@@ -290,109 +309,52 @@
 
   <!-- login && register Modal -->
   <div class="modal fade p-sm-4" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered max-w-979">
+    <div class="modal-dialog modal-dialog-centered max-w-450">
       <div class="modal-content rounded-43">
         <div class="modal-body p-4">
-          <div class="row g-5">
-            <div class="col-md-5 col-12">
-              <h2 class="font-bold text-center fs-32 my-4">ثبت نام</h2>
-              <ul
-                class="nav nav-pills bg-main5 max-w-224 p-2 mx-auto rounded-pill d-flex justify-content-center mb-0 p-0 fs-14 font-bold"
-                id="pills-tab" role="tablist">
-                <li class="nav-item flex-grow-1 rounded-pill" role="presentation">
-                  <button class="nav-link text-white py-2 w-100 active" id="pills-home2-tab" data-bs-toggle="pill"
-                    data-bs-target="#pills-home2" type="button" role="tab" aria-controls="pills-home2"
-                    aria-selected="true">ثبت نام</button>
-                </li>
-                <li class="nav-item flex-grow-1 rounded-pill" role="presentation">
-                  <button class="nav-link text-white py-2 w-100" id="pills-profile2-tab" data-bs-toggle="pill"
-                    data-bs-target="#pills-profile2" type="button" role="tab" aria-controls="pills-profile2"
-                    aria-selected="false">ورود</button>
-                </li>
-              </ul>
-              <div class="tab-content mt-4" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-home2" role="tabpanel"
-                  aria-labelledby="pills-home2-tab" tabindex="0">
-                  <p class="text-secondary fs-12">
-                    لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم
-                    ایپسوم لورم ایپسوم
-                  </p>
-                  <form class="mt-4">
-                    <div class="mb-4">
-                      <label class="fs-14">شماره موبایل</label>
-                      <input class="outline-none w-100 border-main d-block mt-2 p-3 fs-12 rounded-pill"
-                        placeholder="شماره موبایل خود را وارد کنید">
-                    </div>
-                    <div class="mb-4">
-                      <label class="fs-14">ایمیل</label>
-                      <input class="outline-none w-100 border-main d-block mt-2 p-3 fs-12 rounded-pill"
-                        placeholder="آدرس ایمیل خود را وارد کنید">
-                    </div>
-                    <div class="mb-4">
-                      <label class="fs-14">رمز عبور</label>
-                      <div class="border-main mt-2 rounded-pill position-relative">
-                        <input class="outline-none w-100 p-3 border-0 d-block fs-12"
-                          placeholder="رمز عبور خود را ثبت کنید">
-                        <img alt="icon" src="img/svg/invisible 1.svg"
-                          class="position-absolute start-0 top-0 m-18 cursor">
-                      </div>
-                    </div>
-                    <button
-                      class="font-bold rounded-pill bg-second text-white d-block w-160 h-38 button-hover-2 border-0"><span>ثبت</span></button>
-                  </form>
+              <h2 class="font-bold text-center fs-32 my-3">ورود / ثبت نام</h2>
+              <p class="text-secondary fs-12">لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم</p>
+              <form class="mt-4">
+                <div class="mb-3">
+                  <label class="fs-14">شماره موبایل</label>
+                  <div class="d-flex align-items-center gap-2 rounded-pill border-main d-block mt-2 p-2">
+                    <input type="tel" class="outline-none w-100 border-0 fs-14" placeholder="091********">
+                    <img alt="icon" src="img/svg/call.svg">
+                  </div>
                 </div>
-                <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile2-tab"
-                  tabindex="0">
-                  <p class="text-secondary fs-12">
-                    لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم
-                    ایپسوم لورم ایپسوم
-                  </p>
-                  <form class="mt-4">
-                    <div class="mb-4">
-                      <label class="fs-14">شماره موبایل</label>
-                      <input class="outline-none w-100 border-main d-block mt-2 p-3 fs-12 rounded-pill"
-                        placeholder="شماره موبایل خود را وارد کنید">
-                    </div>
-                    <div class="mb-5">
-                      <label class="fs-14">رمز عبور</label>
-                      <div class="border-main mt-2 rounded-pill position-relative">
-                        <input class="outline-none w-100 p-3 border-0 d-block fs-12"
-                          placeholder="رمز عبور خود را ثبت کنید">
-                        <img alt="icon" src="img/svg/invisible 1.svg"
-                          class="position-absolute start-0 top-0 m-18 cursor">
-                      </div>
-                      <a class="fs-14 text-second d-inline-block text-second mt-3">رمز عبور خود را فراموش کردم !</a>
-                    </div>
-                    <button
-                      class="font-bold rounded-pill bg-second text-white d-block w-160 h-38 button-hover-2 border-0"><span>ثبت</span></button>
-                  </form>
-                </div>
-              </div>
+                <div data-bs-toggle="modal" data-bs-target="#otpModal" class="font-bold d-flex align-items-center justify-content-center rounded-pill bg-second text-white cursor d-block w-100 h-48 button-hover-2 border-0"><span>ادامه</span></div>
+              </form>
             </div>
-            <div class="col-md-7 px-0 col-12 d-none d-md-block">
-              <img alt="img" src="img/Group 231.png" class="rounded-20 w-100 h-100">
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
-
-  <!-- order Modal -->
-  <div class="modal fade p-sm-4" id="orderModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered max-w-497">
-      <div class="modal-content rounded-16">
+  <div class="modal fade p-sm-4" id="otpModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered max-w-450">
+      <div class="modal-content rounded-43">
         <div class="modal-body p-4">
-          <img alt="img" src="img/Success Illustration.png" class="d-block mx-auto mt-2 img-fluid">
-          <p class="text-success3 text-center fs-20 font-bold mt-3 mb-2">سفارش شما با موفقیت ثبت شد</p>
-          <p class="fw-bold text-gray2 fs-14 text-center mb-4">
-            کد رهگیری سفارش شما:
-            ۲۳۴۵۶۷۸۹
-          </p>
-          <a class="d-flex align-items-center justify-content-center py-2 rounded-pill btn btn-outline-warning">
-            <p class="mb-0">سفارش های من</p>
-          </a>
-        </div>
+              <h2 class="font-bold text-center fs-32 mt-3 mb-4">کد فعالسازی</h2>
+              <p class="text-secondary fs-12 mb-2">کد ارسال شده به شماره موبایل 09104992277 را وارد کنید.</p>
+              <p class="fs-12 text-secondary">
+                شماره موبایل اشتباه است ! <span data-bs-dismiss="modal" class="cursor text-second fs-14 fw-bold">تغییر شماره موبایل</span>
+              </p>
+              <form class="mt-5">
+                <div dir="ltr" class="otp mb-3 d-flex align-items-center justify-content-between gap-2">
+                   <input maxlength="1" min="1" max="9" type="number" class="active fs-20 font-bold text-main2 w-54 h-48 text-center rounded-16 border-main3 outline-none">
+                   <input maxlength="1" min="1" max="9" type="number" class="fs-20 font-bold text-main2 w-54 h-48 text-center rounded-16 border-main3 outline-none">
+                   <input maxlength="1" min="1" max="9" type="number" class="fs-20 font-bold text-main2 w-54 h-48 text-center rounded-16 border-main3 outline-none">
+                   <input maxlength="1" min="1" max="9" type="number" class="fs-20 font-bold text-main2 w-54 h-48 text-center rounded-16 border-main3 outline-none">
+                   <input maxlength="1" min="1" max="9" type="number" class="fs-20 font-bold text-main2 w-54 h-48 text-center rounded-16 border-main3 outline-none">
+                </div>
+                <button class="font-bold d-flex align-items-center justify-content-center rounded-pill bg-second text-white cursor d-block w-100 h-48 button-hover-2 border-0"><span>ثبت</span></button>
+                <div class="d-flex align-items-center justify-content-between gap-2 my-4">
+                  <div class="d-flex align-items-center gap-2">
+                   <p class="mb-0 fs-12 text-secondary">زمان باقی مانده :</p>
+                   <p class="mb-0 fs-14 text-second fw-bold">00:22 ثانیه</p>
+                  </div>
+                  <p class="fw-bold fs-14 text-main2 cursor mb-0">ارسال مجدد کد</p>
+                </div>
+              </form>
+            </div>
       </div>
     </div>
   </div>
@@ -959,10 +921,10 @@
           <p class="mb-0 fw-bold fs-sm-12">0919456789</p>
           <img alt="icon" src="img/svg/call-calling.svg">
         </a>
-        <!-- <a data-bs-toggle="modal" data-bs-target="#loginModal"
-          class="h-46 w-46 button-hover-2 d-flex align-items-center justify-content-center rounded-circle bg-second">
+        <a data-bs-toggle="modal" data-bs-target="#loginModal"
+          class="h-46 w-46 button-hover-2 d-none align-items-center justify-content-center rounded-circle bg-second">
           <img alt="icon" src="img/svg/user.svg">
-        </a> -->
+        </a>
         <div class="h-46 d-flex align-items-center justify-content-center rounded-pill gap-2 px-2 bg-second3">
           <img alt="icon" src="img/Frame 1000015023.png" class="d-block w-38 h-38 rounded-circle">
           <li class="nav-item dropdown list-unstyled">
